# PDSDI-TP

./: README.md  docker-compose-dev.yml  docker-compose.yml  make.py  utils.py
app/: Cargo.toml  README.md  keystore.jks  make.py  package.json  tauri.conf.json
app/.cargo/: config.toml
app/icons/: icon.icns
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
backend/: Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build.rs  make.py
backend/sql/: init-db.sql  schema.sql
backend/src/: db.rs  json_utils.rs  main.rs
backend/src/handlers/: clothe_handlers.rs  mod.rs  outfit_handlers.rs  user_handlers.rs
backend/src/models/: clothe.rs  mod.rs  user.rs
backend/src/routes/: clothe_routes.rs  mod.rs  outfit_routes.rs  user_routes.rs
backend/src/utils/: bool_pack.rs  hashing_utils.rs  json_utils.rs  mod.rs  session_utils.rs
cbf/: Cargo.toml  README.md  main.ts  tests.ts
cbf/src/: lib.rs
cbf/tests/: README.md  index.ts  tests.test.ts
frontend/: README.md  astro.config.mjs  bun.lockb  make.py  package.json  svelte.config.js  tailwind.config.mjs  tsconfig.json
frontend/src/: middleware.ts
frontend/src/api/: bool_pack.ts  middleware.ts  utils.ts
frontend/src/components/: AddButton.astro  AddButtonIcon.astro  AddButtonSvg.astro  AddModal.svelte  Button.svelte  CardLoader.svelte  Carousel.svelte  ClothesOutfitsSelect.svelte  ColorsCheckbox.svelte  DragAndDrop.svelte  Dropdown.svelte  DropdownColor.svelte  DropdownSettings.svelte  DropdownTemperature.svelte  ErrorAlert.svelte  Eye.astro  EyeCard.svelte  Footer.astro  GenerateOutfitPage.svelte  GenerateOutfitsButton.astro  Generate_Outfit_Icon.astro  GenericAvatarIcon.astro  InputLogin.svelte  InputProfile.svelte  KEK.svelte  LanguagePicker.astro  LastOutfit.svelte  Modal.svelte  ModalSettings.svelte  NavBar.astro  NavBarLogin.astro  OutfitCard.svelte  OutfitComponent(page).svelte  OutfitLoader.svelte  PasswordLoginIcon.svelte  Range.svelte  SettingsIcon.astro  SettingsIcon.svelte  Stats.svelte  TableAdmin.svelte  (+5 more)
frontend/src/components/Alert/: Alert.svelte  Alert.ts
frontend/src/components/Icons/: EmailIcon.svelte  EyeIcon.astro  GenericAvatarIcon.astro  GitHub.astro  HashtagIcon.astro  SettingsIcon.svelte  ThemeIcon.astro  UsernameLoginIcon.svelte
frontend/src/components/Svgs/: AddButtonIcon.svelte  DropdownIcon.svelte  ThemeIcon.astro
frontend/src/i18n/: translations.ts  utils.ts
frontend/src/i18n-integration/: index.ts
frontend/src/layouts/: Layout.astro
frontend/src/pages/: admin.astro  clothes.astro  index.astro  login.astro  outfit.astro  profile.astro  upload.astro
frontend/src/pages/pt/: admin.astro  clothes.astro  index.astro  login.astro  outfit.astro  outfit.svelte  upload.astro
model/: README.md  bool_pack.py  main.py  make.py  pyproject.toml
resources/: API.md  Modelo Casos de Uso PDSDI Lucas Linhares 32187 Guilherme Sousa 32188.drawio  Modelo Relacional PDSDI Lucas Linhares 32187 Guilherme Sousa 32188.drawio  PDSDI.postman_collection.json  Relatório PDSDI Lucas de Linhares Guilherme Sousa.docx
