[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = [
    "Lucas de Linhares <lucaslinhares@ipvc.pt>, Guiherme Sousa <sousaguilherme@ipvc.pt>",
]

[dependencies]
actix-web = "4"
mimalloc = "0.1.43"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
] }
tokio-postgres = "0.7.12"

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
