[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = [
    "Lucas de Linhares <lucaslinhares@ipvc.pt>, Guiherme Sousa <sousaguilherme@ipvc.pt>",
]

[dependencies]
chrono = { version = "0.4.39", default-features = false }
actix-web = { version = "4", features = ["openssl"] }
mimalloc = "0.1.43"
serde = { version = "1", default-features = true }
sonic-rs = "0.3.17"
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
argon2-kdf = { git = "https://github.com/lucascompython/argon2-kdf", branch = "main" }
thiserror = "2.0.11"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
env_logger = { version = "0.11.6", optional = true }
actix-cors = "0.7.0"
openssl = "0.10"
actix-multipart = "0.7.2"
futures = "0.3.31"

cbf = { path = "../cbf" }

[features]
default = []
log = ["env_logger"]


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
