[package]
name = "cbf"
version = "0.1.0"
edition = "2021"

[dependencies]

[lib]
crate-type = ["cdylib", "rlib"]


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
# TODO: Find and alternative to wee_alloc since it is deprecated, maybe https://github.com/SFBdragon/talc
wee_alloc = "0.4.5"


[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
opt-level = "s"   # Optimizes for size.
